@@ -30,16 +30,20 @@
             <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
+                  <!-- Keeping illegal-access=permit for Java 11 compatibility, even though it has no effect on JDK 17 -->
                   <argLine>
                      --illegal-access=permit
+                     --add-opens=java.base/java.lang=ALL-UNNAMED
                   </argLine>
                </configuration>
             </plugin>
             <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
+               <!-- Keeping illegal-access=permit for Java 11 compatibility, even though it has no effect on JDK 17 -->
                <configuration>
                   <argLine>
                      --illegal-access=permit
+                     --add-opens=java.base/java.lang=ALL-UNNAMED
                   </argLine>
                </configuration>
             </plugin>
